@@ -10,6 +10,11 @@ Regina - A Normal Surface Theory Calculator
 Version 4.6  [ (under development) ]
 
     ENGINE:
+        Class NEdge:
+            - Added new static arrays NEdge::edgeNumber and NEdge::edgeVertex
+              to replace the old global arrays regina::edgeNumber,
+              regina::edgeStart end regina::edgeEnd.  The old global
+              arrays are now deprecated (see below).
         Class NFastRay:
             - New fast but inflexible ray class; this builds on NFastVector
               in the same way that the slower NRay builds on NVector.
@@ -47,6 +52,9 @@ Version 4.6  [ (under development) ]
         Routine writeResUsage():
             - New helper routine to assist with diagnostics and measurements
               of performance.
+        Global arrays edgeNumber, edgeStart, edgeEnd:
+            - Deprecated; users are advised to switch to the new arrays
+              NEdge::edgeNumber and NEdge::edgeVertex instead.
     USER INTERFACE:
         - Items in the triangulation composition list can now be copied
           into the clipboard via the right mouse button.  Amongst other
